--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "start-dev": "nf start -p 3000",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -19,6 +20,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "fast-csv": "^2.4.0",
+    "foreman": "^2.0.0",
     "jquery": "^3.2.1",
     "leaflet": "^1.2.0",
     "leaflet.markercluster": "^1.1.0",
